kubernetes/python/python-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: python-service-ingress
  namespace: my-restaurant
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /reports
        backend:
          serviceName: python-service-svc
          servicePort: 15780
